# shuffled-images

./: .gitignore  CMakeLists.txt  ShuffledImages.ipynb  Solver.cpp  generate_input.py  model-16x8.h5  model-32.h5  model.h5  test1-32.txt  test1-64.txt  train.py  utils.py
data/data_test1_blank/32/: 2100.txt  2101.txt  2102.txt  2103.txt  2104.txt  2105.txt  2106.txt  2107.txt  2108.txt  2109.txt  2110.txt  2111.txt  2112.txt  2113.txt  2114.txt  2115.txt  2116.txt  2117.txt  2118.txt  2119.txt  2120.txt  2121.txt  2122.txt  2123.txt  2124.txt  2125.txt  2126.txt  2127.txt  2128.txt  2129.txt  2130.txt  2131.txt  2132.txt  2133.txt  2134.txt  2135.txt  2136.txt  2137.txt  2138.txt  2139.txt  (+260 more)
data/data_test1_blank/64/: 2400.txt  2401.txt  2402.txt  2403.txt  2404.txt  2405.txt  2406.txt  2407.txt  2408.txt  2409.txt  2410.txt  2411.txt  2412.txt  2413.txt  2414.txt  2415.txt  2416.txt  2417.txt  2418.txt  2419.txt  2420.txt  2421.txt  2422.txt  2423.txt  2424.txt  2425.txt  2426.txt  2427.txt  2428.txt  2429.txt  2430.txt  2431.txt  2432.txt  2433.txt  2434.txt  2435.txt  2436.txt  2437.txt  2438.txt  2439.txt  (+260 more)
data/data_train/: data_train_16_answers.txt  data_train_32_answers.txt  data_train_64_answers.txt
data/data_train/64/: 1200.txt  1201.txt  1202.txt  1203.txt  1204.txt  1205.txt  1206.txt  1207.txt  1208.txt  1209.txt  1210.txt  1211.txt  1212.txt  1213.txt  1214.txt  1215.txt  1216.txt  1217.txt  1218.txt  1219.txt  1220.txt  1221.txt  1222.txt  1223.txt  1224.txt  1225.txt  1226.txt  1227.txt  1228.txt  1229.txt  1230.txt  1231.txt  1232.txt  1233.txt  1234.txt  (+565 more)
